--- a/external_libs/CBLAS/Makefile.in
+++ b/external_libs/CBLAS/Makefile.in
@@ -23,7 +23,7 @@ PLAT = LINUX
 #-----------------------------------------------------------------------------
  
 BLLIB = ../../BLAS/blas_$(PLAT).a
-CBLIB = ../lib/cblas_$(PLAT).a
+CBLIB = ../lib/libcblas.a
 
 #-----------------------------------------------------------------------------
 # Compilers
